--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "GPLV3",
   "dependencies": {
     "@types/koa-bodyparser": "^5.0.1",
+    "@types/koa-session": "^5.7.4",
     "@types/mysql": "^2.15.5",
     "busboy": "^0.2.14",
     "koa": "^2.5.3",
@@ -21,11 +22,13 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "koa-session": "^5.9.0",
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
     "koa2-cors": "^2.0.6",
     "md5.js": "^1.3.5",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "svg-captcha": "^1.3.11"
   },
   "devDependencies": {
     "@types/koa": "^2.0.46",
