--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
   "license": "GPLV3",
   "dependencies": {
     "@types/dotenv": "^4.0.3",
+    "@types/ioredis": "^4.0.3",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-session": "^5.7.4",
     "@types/mysql": "^2.15.5",
     "busboy": "^0.2.14",
     "dotenv": "^6.1.0",
+    "ioredis": "^4.2.0",
     "koa": "^2.5.3",
     "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
+    "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-session": "^5.9.0",
+    "koa-session-redis": "^1.1.0",
+    "koa-session2": "^2.2.8",
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
     "koa2-cors": "^2.0.6",
