--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "koa": "^2.5.3",
     "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
-    "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
-    "koa-session": "^5.9.0",
     "koa-session-redis": "^1.1.0",
     "koa-session2": "^2.2.8",
     "koa-static": "^5.0.0",
@@ -35,7 +33,8 @@
     "koa2-cors": "^2.0.6",
     "md5.js": "^1.3.5",
     "mysql": "^2.16.0",
-    "svg-captcha": "^1.3.11"
+    "svg-captcha": "^1.3.11",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "@types/koa": "^2.0.46",
