--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/ioredis": "^4.0.3",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-session": "^5.7.4",
+    "@types/lodash": "^4.14.118",
     "@types/mysql": "^2.15.5",
     "busboy": "^0.2.14",
     "dotenv": "^6.1.0",
@@ -31,6 +32,7 @@
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
     "koa2-cors": "^2.0.6",
+    "lodash": "^4.17.11",
     "md5.js": "^1.3.5",
     "mysql": "^2.16.0",
     "svg-captcha": "^1.3.11",
