use nginx proxy api, use linux env, update pack.json

--- a/doc/nginx/nginx.conf
+++ b/doc/nginx/nginx.conf
@@ -1,11 +1,9 @@
-#user www-data;
-
-user root;
-worker_processes auto;
+user www-data;
+worker_processes 1;
 pid /run/nginx.pid;
 
 events {
-	worker_connections 768;
+	worker_connections 1024;
 	# multi_accept on;
 }
 
@@ -77,6 +75,11 @@ server {
 	root /root/Git/galmoe/galmoe-server/public;
 	index index.html;
 
+    # proxy
+    location /api/ {
+        proxy_pass http://192.168.10.101:3000/api;
+    }
+
 	# vue
 	location / {
 		try_files $uri $uri/ @router;
@@ -113,7 +116,7 @@ server {
         image_filter_interlace on;            # 将jpeg图片转换为可以渐进式加载的格式，这样用户可以尽快看到图片效果
         image_filter_transparency on;         # 是否保留图片的透明像素，因为我们还有png图，所以这里要打开
         image_filter_buffer 8M;
-        #error_page   415 = /empty;
+        # error_page   415 = /empty;
     }
 
 	# webp
@@ -121,6 +124,9 @@ server {
 		expires 365d;
 		try_files $uri $uri/ @webp; # 如果文件不存在尝试生成 webp 图片
     }
+	# location /empty {
+	# 	nodata.png;
+	# }
 
     location @webp {
         if ($uri ~ "/([a-zA-Z0-9-_]+)\.(png|jpg|gif)\.webp") {
