--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "GPLV3",
   "dependencies": {
     "@types/dotenv": "^4.0.3",
+    "@types/gm": "^1.18.2",
     "@types/ioredis": "^4.0.3",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-session": "^5.7.4",
@@ -21,6 +22,7 @@
     "@types/mysql": "^2.15.5",
     "busboy": "^0.2.14",
     "dotenv": "^6.1.0",
+    "gm": "^1.23.1",
     "ioredis": "^4.2.0",
     "koa": "^2.5.3",
     "koa-body": "^4.0.4",
