fix upload, fix webp, fix nginx proxy_cache

--- a/doc/nginx/nginx.conf
+++ b/doc/nginx/nginx.conf
@@ -1,6 +1,7 @@
 user www-data;
 worker_processes 1;
 pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
 	worker_connections 1024;
@@ -25,15 +26,6 @@ http {
 
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
-
-	# webp.lua
-	lua_package_path "/etc/nginx/config/?.lua;";
-
-	# image/webp webp;
-    map $http_accept $webp_suffix {
-      default   "";
-      "~*webp"  ".webp";
-    }
 
 	##
 	# SSL Settings
@@ -65,17 +57,17 @@ http {
 
 #### server
 server {
-   	listen 8081;
-   	server_name 47.94.16.206;
+   	listen 80;
+   	server_name 192.168.10.101;
 	#server_name localhost;
 	error_page 500 502 503 504 /50x.html;
 	location = /50x.html {
 		root html;
 	}
-	root /root/Git/galmoe/galmoe-server/public;
+	root /data/github/galmoe/galmoe-ts/public;
 	index index.html;
 
-    # proxy
+    # proxy api
     location /api/ {
         proxy_pass http://192.168.10.101:3000/api;
     }
@@ -91,48 +83,71 @@ server {
 		rewrite ^.*$ /index.html last;
 	}
 
-	# image filter
-    location ~ \.(gif|jpg|jpeg|png|bmp|swf|webp)$ {
-		root  /root/Git/galmoe/galmoe-server/public/img/;
-        set $width    "-";
-		set $height   "-";
-		if ( $arg_w != "" ){
-        set $width $arg_w;
-        }
-        if ( $arg_h != "" ){
-        set $height $arg_h;
-        }
-        set $rotate "-";
-        if ( $arg_r != "" ){
-        set $rotate $arg_r;
-        }
-        set $quality "-";
-        if ( $arg_q != "" ){
-        set $quality $arg_q;
-        }
-        image_filter resize $width $height;   # 缩放图片
-        image_filter rotate $rotate;          # 旋转图片
-        image_filter_interlace on;            # 将jpeg图片转换为可以渐进式加载的格式，这样用户可以尽快看到图片效果
-        image_filter_transparency on;         # 是否保留图片的透明像素，因为我们还有png图，所以这里要打开
-        image_filter_buffer 8M;
+	# proxy images
+	location ~ \.(gif|jpg|jpeg|png|bmp|swf|webp)$ {
+		proxy_cache resized;
+        proxy_cache_min_uses 2;
+        proxy_cache_lock on;
+        proxy_cache_valid 200 1d;
+        proxy_cache_valid any 1m;
+        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+
+        proxy_set_body none;
+        proxy_redirect off;
+
+        proxy_pass http://192.168.10.101:8888;
+        proxy_pass_request_headers off;
+
+        add_header X-Proxy-Cache $upstream_cache_status;
+    }
+}
+
+#### source https://github.com/sergejmueller/sergejmueller.github.io/wiki/Nginx:-Real-time-image-resizing-and-caching
+#### proxy_cache_server
+
+proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=resized:10m max_size=256m inactive=1h use_temp_path=off;
+
+server {
+	listen 8888;
+	allow 192.168.10.101;
+	#deny all;
+	#limit_except GET {
+    	#deny all;
+    #}
+	root /data/github/galmoe/galmoe-ts/public/images;
+    # image filter
+
+
+    location / {
+        set $w "-";
+        set $h "-";
+		set $q "-";
+		set $r "-";
+		if ( $arg_w ) {
+			set $w $arg_w;
+		}
+		if ( $arg_h ) {
+			set $h $arg_h;
+		}
+		if ( $arg_q ) {
+			set $q $arg_q;
+		}
+		if ( $arg_r != "" ){
+			set $r $arg_r;
+		}
+
+
+        image_filter            resize $w $h;
+		image_filter		    rotate $r;
+        image_filter_buffer         8M;
+        image_filter_interlace      on;
         # error_page   415 = /empty;
     }
 
-	# webp
-	location /images {
-		expires 365d;
-		try_files $uri $uri/ @webp; # 如果文件不存在尝试生成 webp 图片
-    }
 	# location /empty {
 	# 	nodata.png;
 	# }
-
-    location @webp {
-        if ($uri ~ "/([a-zA-Z0-9-_]+)\.(png|jpg|gif)\.webp") {
-          content_by_lua_file "/etc/nginx/conf/webp.lua";
-        }
-    }
-}  
+}
 
 	#access_log off;	
 
@@ -144,9 +159,8 @@ server {
 
 	#  include /etc/nginx/conf.d/*.conf;
 	# include /etc/nginx/sites-enabled/*;
-
-
-
+	
+}
 #mail {
 #	# See sample authentication script at:
 #	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
@@ -167,3 +181,4 @@ server {
 #		proxy      on;
 #	}
 #}
+
