--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Beats0",
   "license": "GPLV3",
   "dependencies": {
+    "@types/bluebird": "^3.5.24",
     "@types/dotenv": "^4.0.3",
     "@types/gm": "^1.18.2",
     "@types/ioredis": "^4.0.3",
@@ -20,6 +21,7 @@
     "@types/koa-session": "^5.7.4",
     "@types/lodash": "^4.14.118",
     "@types/mysql": "^2.15.5",
+    "bluebird": "^3.5.3",
     "busboy": "^0.2.14",
     "dotenv": "^6.1.0",
     "gm": "^1.23.1",
