add nginx referer

--- a/doc/nginx/nginx.conf
+++ b/doc/nginx/nginx.conf
@@ -85,7 +85,13 @@ server {
 
 	# proxy images
 	location ~ \.(gif|jpg|jpeg|png|bmp|swf|webp)$ {
-		proxy_cache resized;
+	# referers
+	valid_referers  192.168.10.101  *.baidu.com *.google.com;
+    if ($invalid_referer) {
+        return 403;
+    }
+
+	proxy_cache resized;
         proxy_cache_min_uses 2;
         proxy_cache_lock on;
         proxy_cache_valid 200 1d;
@@ -110,38 +116,40 @@ proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=resized:10m max_size=256
 server {
 	listen 8888;
 	allow 192.168.10.101;
-	#deny all;
-	#limit_except GET {
-    	#deny all;
+	deny all;
+	#limit_except GET  {
+	#  allow 192.168.10.101;
+    #  deny all;
     #}
+
 	root /data/github/galmoe/galmoe-ts/public/images;
-    # image filter
-
-
+   
+     # image filter
     location / {
-        set $w "-";
-        set $h "-";
-		set $q "-";
-		set $r "-";
-		if ( $arg_w ) {
-			set $w $arg_w;
-		}
-		if ( $arg_h ) {
-			set $h $arg_h;
-		}
-		if ( $arg_q ) {
-			set $q $arg_q;
-		}
-		if ( $arg_r != "" ){
-			set $r $arg_r;
-		}
+	set $w "-";
+	set $h "-";
+	set $q "-";
+	set $r "-";
+
+	if ( $arg_w ) {
+		set $w $arg_w;
+	}
+	if ( $arg_h ) {
+		set $h $arg_h;
+	}
+	if ( $arg_q ) {
+		set $q $arg_q;
+	}
+    if ( $arg_r != "" ){
+        set $r $arg_r;
+    }
 
 
-        image_filter            resize $w $h;
-		image_filter		    rotate $r;
-        image_filter_buffer         8M;
-        image_filter_interlace      on;
-        # error_page   415 = /empty;
+    image_filter	resize		$w $h;
+	image_filter	rotate 		$r;
+    image_filter_buffer         8M;
+    image_filter_interlace      on;
+    # error_page   415 = /empty;
     }
 
 	# location /empty {
@@ -159,7 +167,7 @@ server {
 
 	#  include /etc/nginx/conf.d/*.conf;
 	# include /etc/nginx/sites-enabled/*;
-	
+
 }
 #mail {
 #	# See sample authentication script at:
