--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "@types/bluebird": "^3.5.24",
     "@types/dotenv": "^4.0.3",
     "@types/gm": "^1.18.2",
-    "@types/ioredis": "^4.0.3",
-    "@types/koa-bodyparser": "^5.0.1",
+    "@types/ioredis": "^4.0.4",
+    "@types/koa-bodyparser": "^5.0.2",
     "@types/koa-session": "^5.7.4",
     "@types/lodash": "^4.14.118",
     "@types/mysql": "^2.15.5",
     "bluebird": "^3.5.3",
     "busboy": "^0.2.14",
     "dotenv": "^6.1.0",
+    "event-stream": "^3.3.4",
     "gm": "^1.23.1",
     "ioredis": "^4.2.0",
-    "koa": "^2.5.3",
+    "koa": "^2.6.2",
     "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
@@ -39,15 +40,15 @@
     "lodash": "^4.17.11",
     "md5.js": "^1.3.5",
     "mysql": "^2.16.0",
-    "svg-captcha": "^1.3.11",
+    "svg-captcha": "^1.3.12",
     "xss": "^1.0.3"
   },
   "devDependencies": {
-    "@types/koa": "^2.0.46",
-    "@types/koa-router": "^7.0.32",
-    "nodemon": "^1.18.4",
+    "@types/koa": "^2.0.47",
+    "@types/koa-router": "^7.0.35",
+    "nodemon": "^1.18.7",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.3",
-    "tslint": "^5.11.0"
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6"
   }
 }
